syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.transcoder";
option java_outer_classname = "HelloGrpcProto";

import "google/api/annotations.proto";

package hello;

service HelloGrpc {
    rpc SayHello (HelloRequest) returns (HelloReply) {
        option (google.api.http) = {
            get: "/say/{name}"
        };
    }
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
    int32 count = 2;
}
